--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "buglinjo/laravel-webp",
+    "name": "jfbiswajit/laravel-webp",
     "type": "library",
     "description": "Laravel package for WebP image formatting.",
     "keywords": [
